# moozi

./: .gitignore  .gitmodules  CMakeLists.txt  Pipfile  README.md  TODO  app.py  catch_vnet_pg.ipynb  catch_vpg.ipynb  env.yml  freeze.txt  freeze2.txt  game.ipynb  guild.yml  hardware_sanity_check.ipynb  main.cpp  pseudocode.py  pyproject.toml  requirements.txt  sandbox.ipynb  sanity_checks.ipynb  setup.py  tarball  test_model_supervised-Copy1.ipynb  test_model_supervised.ipynb  test_model_supervised.py
archive/: game.py  jax_muzero_model_separate_params.py
docs/: conf.py  index.rst  modules.rst  moozi.core.rst  moozi.nn.rst  moozi.policy.rst  moozi.rst
examples/: train.py
local_deps/: pseudocode.py  pseudocode_nature.py
moozi/: __init__.py  action.py  action_history.py  actor.py  adder.py  agent.py  batching_layer.py  config.py  driver.py  driver_utils.py  gii.py  jaxboard.py  laws.py  learner.py  link.py  logging.py  loss.py  materia.py  mcts.py  model.py  nerual_network.py  nn.py  node.py  open_spiel_game.py  parameter_optimizer.py  planner.py  player.py  player_shell.py  raw_env_factory.py  replay.py  rollout_worker.py  testing_worker.py  tournament.py  training_worker.py  types.py  universe.py  utils.py
mozi/: __init__.py  jax_to_hlo.py  mcts.py  model.py  utils.py
scripts/: acme_openspiel_wrapper.py  benchmark_queries.py  catch_vpg.ipynb  catch_vpg.py  config.py  interactions.py  jaxlink_sandbox.py  main.py  minimum.py  nn_vis.py  params.npy  pg.py  plot.py  policy_gradient.py  process_reanalyze_expriments.py  sandbox.py  sandbox_2.py  sandbox_core.py  (+3 more)
(+116 files in other folders)
